--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,14 @@
    
 }
 
+.cntr1{
+    margin: auto;
+    width: 100%;
+    height: 100%px;
+    border: 3px solid green;
+    padding: 10px;
+  }
+
 
 .fw-medium {
     font-weight: 600 !important;
@@ -144,6 +152,12 @@
 
 .btn-lg-quiz{
     width: 100%;
+    height: 200px;
+    max-width: 100%;
+}
+
+.btn-lg-login{
+    width: 50%;
     height: 200px;
     max-width: 100%;
 }
@@ -346,6 +360,20 @@
     font-weight: normal;
     font-size: 25px;
     border-radius: 20px; 
+    border: 2px solid #06BBCC;
+    color:#181d38;
+}
+
+.btn-lg-login{
+    padding: 0;
+    margin:10px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: normal;
+    font-size: 25px;
+    border-radius: 20px; 
+    background-color: #FFFFFF;
     border: 2px solid #06BBCC;
     color:#181d38;
 }
@@ -712,4 +740,47 @@
     margin-right: 0;
     padding-right: 0;
     border-right: none;
+}
+
+.mytabs {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1350px;
+    margin: 0px auto;
+    padding: 25px;
+}
+.mytabs input[type="radio"] {
+    display: none;
+}
+.mytabs label {
+    text-align: center;
+    padding: 20px;
+    width: 130px;
+    background: #fff;
+    border: 3px solid #06BBCC;
+    font-weight: bold;
+    border-radius: 15px 15px 0% 0%;
+}
+
+.mytabs .tab {
+    width: 100%;
+    padding: 20px;
+    background: #fff;
+    order: 1;
+    display: none;
+    border: 3px solid #06BBCC;
+    border-radius: 0px 0px 20px 20px;
+}
+.mytabs .tab h2 {
+    font-size: 3em;
+}
+
+.mytabs input[type='radio']:checked + label + .tab {
+    display: block;
+}
+
+.mytabs input[type="radio"]:checked + label {
+    background: #06BBCC;
+    color:#FFFFFF;
+    
 }
